<resources>
    <string name="app_name">Projeto Integrado 2</string>
    <string name="criar_nova_tarefa">Criar nova tarefa</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tarefas_semana">Tarefas da Semana</string>
    <string name="home">Início</string>
    <string name="servicos">Serviços</string>
    <string name="clientes">Clientes</string>
    <string name="agenda_servicos">Agenda de Serviços</string>
    <string name="logo">Logo</string>
    <string name="adicionar">Adicionar</string>
    <string name="excluir">Excluir</string>
    <string name="jo_o_423">João - 423</string>
    <string name="rodrigo_424">Rodrigo - 424</string>
    <string name="cla_dio_425">Claúdio - 425</string>
    <string name="jo_o_ribeiro_48_99612_4235">João Ribeiro – (48) 99612–4235</string>
    <string name="rodrigo_oliveira_48_99875_4632">Rodrigo Oliveira – (48) 99875–4632</string>
    <string name="cla_dio_vidal_48_99765_5748">Claúdio Vidal – (48) 99765–5748</string>
    <string name="jo_o_ribeiro_id_423_endere_o_rua_das_neves">João Ribeiro - ID: 423 — Endereço: Rua das Neves</string>
    <string name="piso_vin_lico_os_4982">Piso Vinílico - OS: 4982</string>
    <string name="rodrigo_oliveira_id_424_endere_o_rua_fim_do_mundo">Rodrigo Oliveira - ID: 424 — Endereço: Rua Fim do Mundo</string>
    <string name="piso_laminado_os_4985">Piso Laminado - OS: 4985</string>
    <string name="cla_dio_vidal_id_425_endere_o_rua_teresina">Claúdio Vidal - ID: 425 — Endereço: Rua Teresina</string>
    <string name="piso_cer_mico_os_4999">Piso Cerâmico - OS: 4999</string>
    <string name="lista_de_servi_os">Lista de Serviços</string>
    <string name="lista_de_clientes">Lista de Clientes</string>
    <string name="jo_o_ribeiro">João Ribeiro</string>
    <string name="conclu_do">Concluído</string>
    <string name="tarefas_de_junho">Tarefas de Junho</string>
    <string name="_9_10">9-10</string>
    <string name="_1_total">1 Total</string>
    <string name="tarefas_da_semana">Tarefas da Semana</string>
    <string name="tarefa_em_andamento">Tarefa em andamento</string>
    <string name="or_amento_com_cliente">Orçamento com cliente</string>
    <string name="_10_00_11_30">10:00 -- 11:30</string>
    <string name="_26">26</string>
    <string name="junho">Junho</string>
    <string name="_13_00_16_30">13:00 -- 16:30</string>
    <string name="tirar_metragem_cla_dio">Tirar metragem Claúdio</string>
    <string name="_16_45_17_20">16:45 -- 17:20</string>
    <string name="_24_junho_2024_27_junho_2024">24 Junho 2024 - 27 Junho 2024</string>
</resources>