<!--suppress AndroidDomInspection -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/topoAzulMenu"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#13293D"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="328dp"
                android:layout_height="82dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="315dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/tarefas_da_semana"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="315dp"
                android:layout_height="53dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="34dp"
                android:background="@drawable/arredondartarefaemandamento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/tarefa_em_andamento"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="315dp"
                android:layout_height="53dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="34dp"
                android:background="@drawable/arredondartarefadois"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/or_amento_com_cliente"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#13293D"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="94dp"
                android:fontFamily="@font/inter"
                android:text="@string/_24_junho_2024_27_junho_2024"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="246dp"
                android:layout_height="59dp"
                android:layout_marginTop="265dp"
                android:layout_marginEnd="34dp"
                android:background="@drawable/arredondar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/or_amento_com_cliente"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#13293D"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/_10_00_11_30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="227dp"
                android:layout_height="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="229dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/_26"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="113dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/junho"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:layout_width="194dp"
                android:layout_height="36dp"
                android:layout_marginTop="347dp"
                android:layout_marginEnd="232dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/inter"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:rotation="90"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="246dp"
                android:layout_height="59dp"
                android:layout_marginTop="400dp"
                android:layout_marginEnd="34dp"
                android:background="@drawable/arredondar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/tirar_metragem_cla_dio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#13293D"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/_16_45_17_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="246dp"
                android:layout_height="59dp"
                android:layout_marginTop="332dp"
                android:layout_marginEnd="34dp"
                android:background="@drawable/arredondar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/piso_vin_lico_os_4982"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#13293D"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/_13_00_16_30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
