<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/topoAzulMenu"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#13293D"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="298dp"
                android:layout_height="108dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/lista_de_servi_os"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:layout_width="120dp"
                android:layout_height="53dp"
                android:layout_marginStart="58dp"
                android:layout_marginEnd="243dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="#E76969"
                android:text="@string/excluir"
                android:textColor="#212121"
                android:background="@drawable/arredondar2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:layout_width="120dp"
                android:layout_height="53dp"
                android:layout_marginStart="243dp"
                android:layout_marginEnd="58dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="#006494"
                android:text="@string/adicionar"
                android:background="@drawable/arredondar2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <FrameLayout
                android:id="@+id/TabelaServico1"
                android:layout_width="359dp"
                android:layout_height="62dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="192dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/arredondar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="279dp"
                        android:fontFamily="@font/inter"
                        android:text="@string/piso_vin_lico_os_4982"
                        android:textColor="#006494"
                        android:textStyle="bold"
                        android:typeface="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="291dp"
                        android:text="@string/jo_o_ribeiro_id_423_endere_o_rua_das_neves"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/TabelaServico2"
                android:layout_width="359dp"
                android:layout_height="62dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/arredondar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/TabelaServico1"
                tools:ignore="TextSizeCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="291dp"
                        android:text="@string/rodrigo_oliveira_id_424_endere_o_rua_fim_do_mundo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.006"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="279dp"
                        android:fontFamily="@font/inter"
                        android:text="@string/piso_laminado_os_4985"
                        android:textColor="#006494"
                        android:textStyle="bold"
                        android:typeface="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="359dp"
                android:layout_height="62dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/arredondar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/TabelaServico2"
                tools:ignore="TextSizeCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="291dp"
                        android:text="@string/cla_dio_vidal_id_425_endere_o_rua_teresina"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.008"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="279dp"
                        android:fontFamily="@font/inter"
                        android:text="@string/piso_cer_mico_os_4999"
                        android:textColor="#006494"
                        android:textStyle="bold"
                        android:typeface="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
